--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "compilerOptions": {
     /* Basic Options */
-    "module": "commonjs",
-    "moduleResolution": "node",
+    "module": "NodeNext",
+    "moduleResolution": "Bundler",
+    "allowImportingTsExtensions": true,
     "esModuleInterop": true,
     "newLine": "LF",
     "outDir": "./lib/",
-    "target": "ES2018",
+    "target": "ESNext",
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
