--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
       - name: setup Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
-          cache: "yarn"
+          cache: "npm"
           node-version: ${{ matrix.node-version }}
       - name: Install
         run: npm ci
